sfClaude/force-app/main/default/objects/Venue__c/Venue__c.object-meta.xml
<CustomObject>
    <label>Venue</label>
    <pluralLabel>Venues</pluralLabel>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
    <description>Represents a physical or virtual location where charity events are hosted. Stores address, capacity, and accessibility information for use when planning and publishing events.</description>
</CustomObject>