sfClaude/force-app/main/default/objects/Venue__c/fields/Accessibility_Notes__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Notes__c</fullName>
    <label>Accessibility Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>