sfClaude/force-app/main/default/objects/Venue__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <description>The maximum number of attendees the venue can accommodate. Used by capacity validation rules on Event__c to prevent over-registration.</description>
    <inlineHelpText>Enter the maximum number of people this venue can hold. This is used to enforce registration limits on events.</inlineHelpText>
</CustomField>