sfClaude/force-app/main/default/objects/Venue__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Text</type>
    <length>80</length>
    <defaultValue>&quot;United Kingdom&quot;</defaultValue>
    <description>The country where the venue is located. Defaults to United Kingdom to reflect the primary operating territory of the charity.</description>
    <inlineHelpText>Enter the country name. Defaults to United Kingdom.</inlineHelpText>
</CustomField>