sfClaude/force-app/main/default/objects/Venue__c/fields/Indoor_Outdoor__c.field-meta.xml
<CustomField>
    <fullName>Indoor_Outdoor__c</fullName>
    <label>Indoor / Outdoor</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indoor</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>