sfClaude/force-app/main/default/objects/Venue__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>Postal Code</label>
    <type>Text</type>
    <length>20</length>
    <description>The postal or zip code of the venue. Used for address validation, mapping integrations, and attendee directions.</description>
    <inlineHelpText>Enter the full postcode (e.g. SW1A 1AA).</inlineHelpText>
</CustomField>