sfClaude/force-app/main/default/objects/Venue__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State / County</label>
    <type>Text</type>
    <length>80</length>
</CustomField>