sfClaude/force-app/main/default/objects/Venue__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
    <description>The street address of the venue. Used for directions, communications, and printed event materials.</description>
    <inlineHelpText>Enter the full street address including building name or number.</inlineHelpText>
</CustomField>